k8s-basico/assets/drupal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal
  namespace: drupal
  labels:
    app: drupal
spec:
  selector:
    matchLabels:
      app: drupal
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: drupal
        tier: frontend
    spec:
      containers:
      - image: drupal:9.4.8-apache
        name: drupal
        ports:
        - containerPort: 80
          name: drupal
