k8s-basico/assets/webserver-deployment-cm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: nginx
        image: bitnami/nginx:1.18
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /app/index.html
          name: welcome
          subPath: index.html
      volumes:
      - configMap:
          defaultMode: 420
          name: welcome
          optional: false
        name: welcome
