k8s-basico/assets/drupal-service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal-mysql
  namespace: drupal
  labels:
    app: drupal
spec:
  ports:
    - port: 3306
  selector:
    app: drupal
    tier: db
  clusterIP: None
