k8s-basico/assets/drupal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal
  namespace: drupal
  labels:
    app: drupal
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: drupal
    tier: frontend
  type: ClusterIP
