k8s-basico/assets/webserver-service-np.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webserver
  name: webserver
spec:
  ports:
  - name: http
    nodePort: 31080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webserver
  type: NodePort
