k8s-basico/assets/drupal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: drupal
  name: drupal
  namespace: drupal
spec:
  rules:
  - host: ${INGRESS_HOST}
    http:
      paths:
      - backend:
          service:
            name: drupal
            port:
              number: 80
        path: /
        pathType: Prefix
