k8s-basico/assets/webserver-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: webserver
  name: webserver
spec:
  rules:
  - host: webserver.${KATAKODA_LB}
    http:
      paths:
      - backend:
          serviceName: webserver
          servicePort: 8080
        path: /
