k8s-basico/assets/webserver.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webserver
  name: webserver
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: nginx
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: nginx
        image: harbor.ctn.prevnet/bitnami/nginx:1.18
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /app/index.html
          name: welcome
          subPath: index.html
      volumes:
      - configMap:
          defaultMode: 420
          name: welcome
          optional: false
        name: welcome
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: webserver
  name: webserver
spec:
  rules:
  - host: HOSTNAME
    http:
      paths:
      - backend:
          serviceName: webserver
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - HOSTNAME
