k8s-basico/assets/wordpress-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: wordpress
  name: wordpress
  namespace: wordpress
spec:
  rules:
  - host: wordpress.${KATAKODA_LB}
    http:
      paths:
      - backend:
          serviceName: wordpress
          servicePort: 80
        path: /
